--- a/app/views/kp/about.html.erb
+++ b/app/views/kp/about.html.erb
@@ -31,23 +31,25 @@
 
   <div class="about-left text-md text-justify">
     <p>
-      Cégünk 2011-ben kezdte tevékenységét. A társaság ügyvezetője Lengyel Árpád, aki a Kft. megalakulását megelőzően
-      több kiemelkedő projektet vezetett, melynek során több mint 20 éves szakmai tapasztalatra tett szert a közmű- és
-      útépítés terén. Fő profilunk a víz- és csatornahálózatok, továbbá a vízépítéshez kapcsolódó olajfogó-,
-      tüzivíztározó műtárgyak építése, utak és parkolók kivitelezése. Rendelkezünk száloptikás csatorna kamerával, így
-      speciális helyeken is vizsgálatokat tudunk végezni. A kivitelezéssel összefüggő tervezési-, engedélyezési
-      feladatok, valamint az üzemeltető cégek felé történő átadások teljeskörű ügyintézését vállaljuk.
+      Cégünk 2011 óta aktívan működik az építőipar területén. A vállalkozás ügyvezetője, Kitalált Károly, a társaság
+      alapítása előtt számos jelentős projekt irányításában vett részt, melyek révén több mint 20 éves tapasztalatra
+      tett szert a közmű- és útépítési munkákban. Fő tevékenységi körünk a víz- és szennyvízhálózatok, valamint a
+      vízépítési feladatokhoz kapcsolódó olajfogók és tüzivíztározók kivitelezése, illetve utak és parkolók építése.
+      Modern száloptikás csatornakamerával is rendelkezünk, amely lehetővé teszi a speciális helyszínek felmérését és
+      vizsgálatát. Komplett szolgáltatást nyújtunk a kivitelezéshez kapcsolódó tervezési és engedélyeztetési
+      feladatokban, valamint az üzemeltetők részére történő átadás teljeskörű lebonyolításában.
     </p>
     <p>
-      A társaság vezetője és állandó partnerei nagy szakmai rutinra tettek szert, és ismerve a közművek
-      követelményrendszerét, korrekt módon tudják azt a megrendelők igényeivel összehangolni. Vállalkozásunk alapvetően
-      a minőségi munkára, a korrekt üzleti kapcsolatokra és a megbízhatóságra, valamint a piacon való hosszú idejű
-      megmaradásra fekteti a hangsúlyt.
+      A cég vezetése és megbízható szakmai partnerei nagy tapasztalattal rendelkeznek, és pontosan ismerik a
+      közműrendszerek követelményeit, amelyeket hatékonyan tudnak összehangolni a megrendelők elvárásaival.
+      Vállalkozásunk elkötelezett a magas minőségű munkavégzés, a korrekt üzleti kapcsolatok kialakítása és fenntartása,
+      valamint a hosszú távú piaci jelenlét iránt.
     </p>
     <p>
-      Szakmai elismertségünket jelzi, hogy a HUMAN BioPlazma Kft. Gyógyszergyár területén lévő teljes víz- csatorna
-      közmű hálózat karbantartását mi végezzük. Kiemelt fontosságú a gyár folyamatos termelése, így szakmailag igazi
-      kihívást és felelősséget jelent a gyár területén végzett tevékenységünk.
+      Szakmai hitelességünket jól mutatja, hogy a MEDICOR Pharma Zrt. telephelyén található teljes víz- és
+      csatornahálózat karbantartási munkálatait társaságunk végzi. A gyógyszergyár zavartalan működésének biztosítása
+      különös szakmai figyelmet és felelősséget követel, így tevékenységünk ebben a környezetben kiemelt jelentőséggel
+      bír.
     </p>
   </div>
   <div class="about-right">
@@ -72,10 +74,10 @@
   <div class="team-columns text-md">
     <div class="team-column">
       <p>
-        <strong>Ügyvezető Igazgató:</strong> Lengyel Árpád
+        <strong>Ügyvezető Igazgató:</strong> Kitalált Károly
       </p>
       <p>
-        <strong>Gazdasági Vezető:</strong> Lengyel Judit
+        <strong>Gazdasági Vezető:</strong> Segíts Elvira
       </p>
       <p>
         <strong>Asszisztens:</strong> 1 fő
