--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
     <div class="footer-grid">
       <div class="footer-logo">
         <a href="/kp/home">
-          <%= image_tag "logowhite_800x173.png", :alt => "logo szoveggel" %>
+          <%= image_tag "kklogowhite_800x173.png", :alt => "logo szoveggel" %>
         </a>
       </div>
       <h3 class="text-md">
